# fastapi-production-kit-postgresql

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: index.md
scripts/: makemigration.py
src/app/core/: config.py
src/app/models/: user.py
src/migrations/: env.py
