[project]
name = "fastapi-production-kit-postgresql"
version = "0.1.0"
description = "FastAPI Production kit with Postgresql"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "fastapi>=0.135.0",
    "flower>=2.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "ruff>=0.15.4",
    "commitizen>=4.13.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.151.6",
    "pip-audit>=2.10.0",
    "bandit>=1.9.3",
    "polyfactory>=3.3.0",
    "httpx>=0.28.1",
]

doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]


# ======================
# Ruff
# ======================
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/__init__.py" = ["D104"]

# ======================
# MyPy (ultra strict)
# ======================
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

# ======================
# Pytest
# ======================
[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "9.0"
addopts = "-ra -q --strict-markers --strict-config --cov=. --cov-report=term-missing --doctest-modules"
testpaths = ["tests"]

# ======================
# Hypothesis
# ======================
[tool.hypothesis]
max_examples = 200
deadline = 500

# ======================
# Coverage
# ======================
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

# ======================
# Commitizen
# ======================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
annotated_tag = true
